<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        >
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/strServiceType"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:gravity="right"
                />
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:id="@+id/spinnerServiceType"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/strUsername"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:gravity="right"
                />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:width="180dp"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:id="@+id/textUsername"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/strPassword"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:gravity="right"
                />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:width="180dp"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:id="@+id/textPassword"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:layout_weight="1"
                android:id="@+id/buttonCancel"
                />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:layout_weight="1"
                android:id="@+id/buttonOK"
                />
    </LinearLayout>

</LinearLayout>
</ScrollView>
</LinearLayout>